package produtos.ReprodutorMusical;

public interface ReprodutorMusical {
    public void tocarMusica();
    public void pausarMusica();
    public void selecionarMusica(String musica);
}
